apps/base/peertube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-peertube
  labels:
    trust.cert-manager.io/inject-bundle: "true"
