apps/base/peertube/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peertube-redis
  namespace: app-peertube
  labels:
    app: peertube-redis
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: peertube-redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: peertube-redis
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: redis
          image: redis:7.4.8-alpine3.21
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: peertube-redis
  namespace: app-peertube
  labels:
    app: peertube-redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
  selector:
    app: peertube-redis
