apps/base/peertube/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: peertube-public
  namespace: app-peertube
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`tube.decentm.com`)
      kind: Rule
      services:
        - name: peertube-server-svc
          port: 9000
